# MagicalStorage

./: README.md
magical_storage/: Cargo.toml
magical_storage/src/: main.rs
ms/: Cargo.toml  Makefile
ms/src/: load_server_config.rs  main.rs
